# visioncraft

./: Dockerfile
nbv_net/: grid_generator.py  nbv_complete_test.py  nbv_inference.py  path_finder.py  regression_nbv_utils.py  regression_nbv_utils_archive.py  requirements.txt  temp.py  test_visioncraft.py
nbv_net/data/: bunny.ply  exploration_map.npy  exploration_map.txt
nbv_net/log/: all_nbvs.txt  nbv.txt
view_planning/: CMakeLists.txt  CMakeLists_Archive.txt  Doxyfile  package.xml  physicial_metric_functions.cpp
view_planning/data/: exploration_map.csv  scaling_factor.txt
view_planning/docs/html/: annotated.html  archive_2model__loader_8cpp.html  archive_2model__loader_8cpp__incl.map  archive_2model__loader_8cpp__incl.md5  archive_2model__loader_8h.html  archive_2model__loader_8h__incl.map  archive_2model__loader_8h__incl.md5  archive_2model__loader_8h_source.html  bindings_8archive_8cpp.html  bindings_8archive_8cpp__incl.map  bindings_8archive_8cpp__incl.md5  bindings_8cpp.html  bindings_8cpp__incl.map  bindings_8cpp__incl.md5  classEventHandler-members.html  classEventHandler.html  classEventHandler__coll__graph.map  classEventHandler__coll__graph.md5  classGridModel-members.html  classGridModel.html  classGridVisualizer-members.html  classGridVisualizer.html  classRay-members.html  classRay.html  classes.html  classvisioncraft_1_1ExplorationMapManager-members.html  classvisioncraft_1_1ExplorationMapManager.html  classvisioncraft_1_1ExplorationSimulator-members.html  classvisioncraft_1_1ExplorationSimulator.html  classvisioncraft_1_1ModelLoader-members.html  classvisioncraft_1_1ModelLoader.html  classvisioncraft_1_1Viewpoint-members.html  classvisioncraft_1_1Viewpoint.html  classvisioncraft_1_1Visualizer-members.html  classvisioncraft_1_1Visualizer.html  classvisioncraft_1_1utils_1_1PoissonSampler-members.html  classvisioncraft_1_1utils_1_1PoissonSampler.html  dir_000005_000000.html  dir_000006_000000.html  dir_2531011b0bf3ab50fbd97e97babf30e1.html  (+84 more)
view_planning/docs/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_5.js  files_6.js  files_7.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+5 more)
view_planning/docs/latex/: annotated.tex  archive_2model__loader_8cpp.tex  archive_2model__loader_8cpp__incl.md5  archive_2model__loader_8h.tex  archive_2model__loader_8h__incl.md5  bindings_8archive_8cpp.tex  bindings_8archive_8cpp__incl.md5  bindings_8cpp.tex  bindings_8cpp__incl.md5  classEventHandler.tex  classEventHandler__coll__graph.md5  classGridModel.tex  classGridVisualizer.tex  classRay.tex  classvisioncraft_1_1ExplorationMapManager.tex  classvisioncraft_1_1ExplorationSimulator.tex  classvisioncraft_1_1ModelLoader.tex  classvisioncraft_1_1Viewpoint.tex  classvisioncraft_1_1Visualizer.tex  classvisioncraft_1_1utils_1_1PoissonSampler.tex  dir_2531011b0bf3ab50fbd97e97babf30e1.tex  dir_2531011b0bf3ab50fbd97e97babf30e1_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_68454cfdcb2eee8c08ac4ae8ee60c161.tex  dir_97f11f8ec7d415b328e6c9e9356ff2e3.tex  dir_c090b14973f6e5361f6a54a497897c8e.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_fc277100eb2366d6c93017d46a44f3ee.tex  exploration__map__manager_8cpp.tex  exploration__map__manager_8cpp__incl.md5  exploration__simulator_8cpp.tex  exploration__simulator_8cpp__incl.md5  exploration__simulator_8h.tex  exploration__simulator_8h__dep__incl.md5  exploration__simulator_8h__incl.md5  files.tex  model__loader_8cpp.tex  model__loader_8cpp__incl.md5  model__loader_8h.tex  (+30 more)
view_planning/include/visioncraft/: exploration_simulator.h  meta_voxel.h  meta_voxel_map.h  model.h  model_loader.h  raycasting.cuh  viewpoint.h  visibility_manager.h  visualizer.h
view_planning/models/: bell_scaled.ply  cube.ply  cube2.ply  sphere.ply
view_planning/scripts/: alignment_property_example.py  attractive_force.py  coverage_efficient_lstm.py  field_performance.py  gmm.py  greedy_quality_search.py  meta_voxel_test.py  minimal_greedy.py  model_loader_test.py  particle_field.py  physics_vp.py  potential_field.py  raycasting_speed.py  raycasting_test.py  raycasting_test2.py  short_greedy.py  simulated_annealing.py  untracking_test_visibility.py  viewpoints_test.py  visibility_manager_test.py  visibility_manager_test2.py  visioncraft_test.py  voxel_property_example.py
view_planning/src/: visioncraft_bindings.cpp
view_planning/src/visioncraft/: bindings.archive.cpp  bindings.cpp  cuda_example.cu  exploration_map_manager.cpp  exploration_simulator.cpp  meta_voxel.cpp  meta_voxel_map.cpp  model.cpp  model_loader.cpp  raycasting.cu  viewpoint.cpp  visibility_manager.cpp  visualizer.cpp
view_planning/src/visioncraft/archive/: GPU_transfer_load_test.cpp  batch_raycasting_visualization.cpp  greedy_quality.cpp  nbv_net_data_generator.cpp  raycasting_speed_analysis.cpp
view_planning/src/visioncraft/bindings/: bindings.cpp  bindings_utils.h  meta_voxel_bindings.hpp  meta_voxel_map_bindings.hpp  model_bindings.hpp  viewpoint_bindings.hpp  visibility_manager_bindings.hpp  visualizer_bindings.hpp
view_planning/tests/: CMakeLists.txt  exploration_view_tests.cpp  field_animation.cpp  field_potential.archive.cpp  field_potential_with_orientation.archive.cpp  model_loader_tests.cpp  nbv_input_visualizer.cpp  observer_tests.cpp  raycasting_archive.cpp  viewpoint_tests.cpp  visualizer_test.cpp  visualizer_tests.cpp
view_planning/tests/cpp/: meta_voxel_map_test.cpp  meta_voxel_test.cpp  model_test.cpp
view_planning/tests/python/: meta_voxel_map_test.py  meta_voxel_test.py
